fix(Bitrate/Sample size dropdown) : Fix Bitrate/Sample size dropdown's cutoff while in fullscreen media(SA-346)

--- a/components/interactables/Select/Select.less
+++ b/components/interactables/Select/Select.less
@@ -23,7 +23,7 @@
 .custom-select {
   position: relative;
   // width: 100%;
-  // height: 100%;
+  height: @select-height;
   text-align: left;
   outline: none;
   color: @text;
@@ -76,6 +76,14 @@
   }
 }
 
-.selectHide {
-  display: none;
+.selectDefault {
+  top: -100vh !important;
+  z-index: -100 !important;
+  opacity: 0;
+}
+
+.selectFullscreen {
+  top: 100vh !important;
+  z-index: -100 !important;
+  opacity: 0;
 }
